--- a/ProjetPooHazardVallee/ProjetPooHazardVallee.csproj
+++ b/ProjetPooHazardVallee/ProjetPooHazardVallee.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Case.cs" />
+    <Compile Include="CreationMaps.cs" />
+    <Compile Include="HerosMap.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
